feat: Implement CRUD appointment and time slot in hospital service
